--- a/03_editingEMLinR.Rmd
+++ b/03_editingEMLinR.Rmd
@@ -1,9 +1,6 @@
----
-title: "Practical EML in R"
-author: "Jeanette Clark"
-date: "2/9/2017"
-output: html_document
----
+
+
+#Editing EML in R
 
 This document is a practical tutorial for using the EML package to solve many metadata problems seen in the ADC. Much of this information can be found in the vignettes here: https://github.com/ropensci/EML/blob/master/vignettes/creating-EML.Rmd
 
@@ -23,7 +20,7 @@ path1 <- 'glacier_metadata.xml'
 eml <- read_eml(path1)
 ```
 
-# Introduction
+## Introduction
 
 When using the EML R package, you will usually be working with objects of class `eml`.
 For example, we can find out what type of object we just created when we ran the `read_eml` function:
@@ -131,11 +128,11 @@ eml@dataset@title
 
 This functionality will prove very useful with other elements (such as dataTable), where there are usually more than one of the same element.
 
-# Attributes
+## Attributes
 
 Since attribute information has to be added to the metadata, we'll cover attributes first.
 
-## Building the attribute table
+### Building the attribute table
 
 First you need to generate a dataframe with attribute information. This dataframe has rows that are attributes, and the following columns:
 
@@ -183,7 +180,7 @@ attributes1 <- data.frame(
 Typing this out in R can be a bit of a pain, so you can import a table made in another program (such as Excel) as your attribute table - just make sure that rows are attributes and column names match the column names as listed above exactly (case is important).
 `attributes1 <- read.csv('~/arctic-data/docs/training/EML/LakeSampleData.csv', stringsAsFactors = F)`
 
-## Defining enumerated domains
+### Defining enumerated domains
 
 For attributes that are enumerated domains, a second table is needed with three columns: `attributeName`, `code`, and `definition`. `attributeName` is repeated for all codes belonging to a common attribute. To make things a little easier and less repetitve, coding wise, codes can be defined using named character vectors and then converted to a data frame.
 In this example, there are two enumerated domains in the attribute list - "Location" and "Region"
@@ -203,7 +200,7 @@ factors1
 
 This table can also be generated using a different program, such as Excel, and imported to R as a .csv, similar to what can be done with the attribute table.
 
-## Generating the attribute list and data table
+### Generating the attribute list and data table
 
 Next the attributeList is generated from the attributes and the factors using the function `set_attributes`. This puts all of the information from the attribute `data.frame` and the factor `data.frame` defining the enumerated domains into the slotted EML schema.
 
@@ -257,7 +254,7 @@ dataTable1 <- new('dataTable',
                   attributeList = attributeList1)
 ```
 
-## Adding a second dataTable
+### Adding a second dataTable
 
 If the metadata document describes multiple Data Objects, a new set of attributes, attribute list, physical description, and dataTable can be created just as in the example above.
 
@@ -289,13 +286,13 @@ Now both `dataTable1` and `dataTable2` are added to the original EML using the `
 eml@dataset@dataTable <- c(dataTable1, dataTable2)
 ```
 
-## Defining custom units
+### Defining custom units
 
 If you get a warning message about your units not being in the standard unit list, a custom unit list needs to be created and added to the additionalMetadata slot of the EML. First we create a custom unit data frame with columns `id` (the name of the unit, as it appears in the attribute table), `unitType`, and `parentSI`. Each custom unit has a row in the data frame. To determine what the unitType and parentSI are for each unit, it may be helpful to reference the list of custom units. This list can easily be viewed in your R console using these commands: 
 
 ```{r}
 standardUnits <- get_unitList()
-View(standardUnits$units)
+#View(standardUnits$units)
 ```
 
 The following lines create the standard unit data table, use the function `set_unitList` to slot it into the EML, and then add it as addionalMetadata to the EML.
@@ -308,7 +305,7 @@ unitlist <- set_unitList(custom_units)
 eml@additionalMetadata <- c(as(unitlist, "additionalMetadata"))
 ```
 
-# Setting other entities
+## Setting other entities
 
 In cases where the data package was submitted originally via the registry, the original EML usually has the data tables described as "other entity" elements in the EML. This information is now redundant since we created data table elements describing these objects. Remove the other entities by replacing the other entity element in the EML with a `ListOfotherEntity` object that consists of an empty list.
 
@@ -316,7 +313,7 @@ In cases where the data package was submitted originally via the registry, the o
 eml@dataset@otherEntity <- new('ListOfotherEntity', list())
 ```
 
-## For files that aren't uploaded yet
+### For files that aren't uploaded yet
 
 There are times, however, when it may be necessary to create other entity tables for objects that are not described using a data table. Examples of these can include: R scripts, large NetCDF file directories, or audio/image files. Adding other entities is easy as long as you have paths to the files on the server and PIDs. This workflow is best if you are uploading files to the ADC yourself.
 
@@ -343,7 +340,7 @@ entity_df <- data.frame(type = 'otherEntity',
 eml <- eml_add_entities(eml, entity_df)
 ```
 
-# For files that are already uploaded
+## For files that are already uploaded
 
 If you are trying to describe data objects that are already on the ADC, you can utilize `lapply` along with `get_package` to easily write the EML `otherEntity` elements. In this case, there are data tables and other entity type elements mixed in, so the `otherEntity` elements (non-csvs) are picked out by hand using indexes. The numbers in the call `otherEnts <- pkg$data[c(5,6,9,10)]` will change depending on your dataset.
 
@@ -354,7 +351,7 @@ otherEnts <- pkg$data[c(5,6,9,10)] #select only `otherEntity` PIDs after viewing
 eml@dataset@otherEntity <- new("ListOfotherEntity", pid_to_eml_other_entity(mn, otherEnts))
 ```
 
-# Coverage
+## Coverage
 
 Sometimes EML documents may lack coverage information describing the temporal, geographic, or taxonomic coverage of a dataset. This example shows how to create coverage information from scratch, or replace an existing coverage element with an updated one. You can view the current coverage (if it exists) by entering `eml@dataset@coverage` into the console. Here the coverage, including temporal, taxonomic, and geographic coverages, is defined using `set_coverage`. 
 
@@ -393,7 +390,7 @@ coverage <- set_coverage(beginDate = '2012-01-01',
 eml@dataset@coverage@geographicCoverage <- c(geocov1, geocov2)
 ```
 
-# Methods
+## Methods
 
 The methods tree in the EML section has many different options, visible in the schema here: https://knb.ecoinformatics.org/emlparser/docs/eml-2.1.1/eml-methods.png. You can create new elements in the methods tree by following the schema and using the "new" command. Remember you can explore possible slots within an element by creating an empty object of the class you are trying to create. For example, `method_step <- new('methodStep')`, and using autocomplete on `method_step@`.
 
@@ -406,7 +403,7 @@ eml@dataset@methods <- methods1
 
 If you want to make minor changes to existing method information that has a lot of nested elements, your best bet may be to edit the EML in a text editor, otherwise there is a risk of accidentally overwriting nested elements with blank object classes, therefore losing method information.
 
-# Keywords
+## Keywords
 
 Keywords are another item that can easily be created if no keywords exist. 
 
@@ -417,7 +414,7 @@ keywords <- new('keywordSet',
 eml@dataset@keywordSet <- c(keywords)
 ```
 
-# People
+## People
 
 To add people, with their addresses, you need to add addresses as their own object class, which you then add to the contact, creator, or associated party classes.
 
@@ -476,7 +473,7 @@ JG_ap <- eml_associated_party("Jesse",
 eml@dataset@associatedParty <- c(JG_ap)
 ```
 
-# Validating and Writing the EML
+## Validating and Writing the EML
 
 The last step is to write and validate the EML. For time-saving purposes, first you write the EML:
 
@@ -493,7 +490,7 @@ If the EML validate returns `FALSE`, it is accompanied by an error that will be 
 
 This error essentially says, the EML validator reached the slot `boundingCoordinates` but did not expect this element. Instead it expected either `geographicDescription` or `references`. Referring to the schema maps (eg: https://knb.ecoinformatics.org/emlparser/docs/eml-2.1.1/eml-coverage.png) you can see that before bounding coordinates, there must be a geographic description. The fix would be to return to your definiton of the geographicCoverage, and insert a geographicDescription into the geographicCoverage object (ie:` geocov1 <- new('geographicCoverage', geographicDescription = 'Description here',...))`.
 
-# Dealing with unusual cases
+## Dealing with unusual cases
 
 Typically, the biggest issue most datateam members have using the EML package is trying to add multiple values within a slot. In some cases, like adding multiple `dataTable` instances or multiple `creator` instances, this is easy, as is shown above. Other times, particularly if the slot is nested within a slot that we use a helper function for (like `set_attributes`), it can get a little more challenging. By delving a little deeper into the EML S4 class of objects though, you can resolve most problems relatively easily.
 
