--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,43 @@ github-repo: rstudio/intern_training
 description: "This is a training guide and reference resource for NCEAS interns working on the SASAP and Arctic Data Center Projects"
 ---
 
-# Welcome {#welcome}
+# Welcome to NCEAS! {#welcome}
 
-**Welcome. This training program is under active development and testing.**
+## First day to-dos:
+
+* Get a tour of the office from Ginger, Jeanette, or Jesse
+* Fill out required paperwork from Michelle
+* Have Ana take your picture (room 309)
+* Set up the remainder of your accounts
+
+## Account information
+* [LDAP - NCEAS](https://identity.nceas.ucsb.edu/identity/cgi-bin/ldapweb.cgi?cfg=account) - Jeanette or Jesse should have set this up prior to your start date to help get other accounts set up by the first day. This account and password control your access to:
+    + arcticdata [RT queue](https://support.nceas.ucsb.edu/rt/)
+    + Github - [arctic-data](https://github.nceas.ucsb.edu/KNB/arctic-data/) and [sasap-data](https://github.nceas.ucsb.edu/KNB/arctic-data/)
+* Datateam server - follow instructions in email from Nick at NCEAS to reset your datateam password in the terminal
+* [ORCiD](https://orcid.org/register) - create an account
+* [NCEAS Slack](http://slack.nceas.ucsb.edu/) - get an invite from [slack.nceas.ucsb.edu](slack.nceas.ucsb.edu)
+* Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request an add from Chris on Slack
+* [Schedule](https://docs.google.com/spreadsheets/d/1Jf7IkSf8Vqu51xv1DDaTNCrTAZd0RMNH9ExZw0eyH4I/edit#gid=299555270) - fill out anticipated quarterly schedule
+
+
+## NCEAS Events
+
+NCEAS hosts a number of events that you are encouraged to attend. Keep an eye on your email but the weekly events are :
+
+* Roundtable
+    + weekly presentation and discussion of research by a visiting or local scientist
+    + Wednesdays at 12:15 in the lounge
+* Coffee Klatch
+    + coffee, socializing, and news updates for NCEAS
+    + Tuesdays at 10:30 in the lounge
+* Salad Potluck
+    + potluck salad and socializing, bring a topping or side to share!
+    + second Tuesday of the month, 12:15 in the lounge
+
+
+
+
+
+
 
