--- a/01_Introduction.Rmd
+++ b/01_Introduction.Rmd
@@ -24,19 +24,41 @@ Watch the first 38 minutes of [this video](https://drive.google.com/drive/u/0/fo
 
 ## Exercise
 
-* Use tabula to extract Table 1 from [this paper](http://iopscience.iop.org/article/10.1088/1748-9326/11/9/095008/meta)
+* Use the "tabula" program to extract Table 1 from [this paper](http://iopscience.iop.org/article/10.1088/1748-9326/11/9/095008/meta)
 * Reformat the table using R under the guidelines in the journal article on effective data management
+    + If you need an R refresher, take as much time as you need to go over the [data carpentry guide](http://www.datacarpentry.org/R-ecology-lesson/01-intro-to-r.html)
+    + You may also find the data carpentry [lesson on `dplyr`](http://www.datacarpentry.org/R-ecology-lesson/03-dplyr.html) helpful
 * Go to [test.arcticdata.io](test.arcticdata.io) and submit your reformatted file with appropriate metadata that you derive from the text of the paper
     + list yourself as the first creator so your test submission can easily be found
+    + for the purposes of this training exercise, not every single author needs to be listed with full contact details, listing the first two authors is fine
+    + attributes (column names) should be defined, including correct units and missing value codes
 
 
-_this part will get moved around into different chapters_
-  + Save and export package locally, not to network
-  + After you export the package, find the metadata file on the local machine. It will be in the morpho export folder, in the metadata sub folder, and will have a file name that looks like datateam2.3 with no extension. Change this filename to something more clear with an xml extension, like "science_metadata.xml"
-  + Transfer the file to the datateam server using the [cyberduck client](https://help.nceas.ucsb.edu/remote_file_access)
-  + A note on paths: on the servers, paths to files in your folder always start with `/home/yourusername/...`.
-* Submit the data to test.arcticdata.io using the web form (UI)
-* Submit the data to test.arcticdata.io using [arcticdatautils](https://github.nceas.ucsb.edu/KNB/arctic-data/blob/master/datateam/How_To/introArcticdatautils.Rmd)
+## Working on a remote server
+
+All of the work that we do at NCEAS is done on our remote server, called "datateam." If you have never worked on a remote server before, you can think of it like working on a different computer via the internet. We access RStudio for our server through the link [datateam.nceas.ucsb.edu/rstudio/](datateam.nceas.ucsb.edu/rstudio/). To transfer files on and off of the server, you'll need to use either bash commands in the terminal, or a program called cyberduck.
+
+### Cyberduck instructions
+
+To use cyberduck to transfer local files onto the datateam server:
+
+1) Open Cyberduck
+2) Click "Open Connection"
+3) From the drop-down, choose "SFTP (SSH File Transfer Protocol)"
+4) Enter "datateam.nceas.ucsb.edu" for Server
+5) Enter your username and password
+6) Connect
+
+From here, you can drag and drop files onto and off of the server.
+
+### A note on paths
+
+On the servers, paths to files in your folder always start with `/home/yourusername/...`.
+
+When you write scripts, try to avoid writing relative paths (which rely on what you have set your working directory to) as much as possible. Instead, write out the entire path as shown above, so that if another intern or Jesse or Jeanette need to run your script, it is not dependent on a working directory.
+
+
+ [arcticdatautils](https://github.nceas.ucsb.edu/KNB/arctic-data/blob/master/datateam/How_To/introArcticdatautils.Rmd)
 * Compare your submission against the [checklist](https://github.nceas.ucsb.edu/KNB/arctic-data/blob/master/datateam/How_To/Checklist.md) and update it until it meets all the checks by:
   + Updating data files as necessary,
   + Manipulating the EML using the [EML package](https://github.nceas.ucsb.edu/KNB/arctic-data/blob/master/datateam/How_To/EML/editingEMLinR.Rmd),
